--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
 Ahmed Abdullah <a7hmed2li@gmail.com>
+Asma Elhadi <Asmaa.alhadi100@gmail.com>
